# pesquisa-operacional-pli-cplex

./: .dockerignore  .gitignore  Dockerfile  README.md  commit_msg.txt  docker-compose.yml  pyproject.toml
PCM/: README.md  entrada.py  in.txt  main.py  modelagem.py  saida.py
PD/: README.md  entrada.py  in.txt  main.py  modelagem.py  saida.py
PFCM/: README.md  entrada.py  in.txt  main.py  modelagem.py  saida.py
PFM/: README.md  entrada.py  in.txt  main.py  modelagem.py  saida.py
PT/: README.md  entrada.py  in.txt  main.py  modelagem.py  saida.py
SpecsExemplosTrabalho/: Readme.txt
SpecsExemplosTrabalho/Mochila01 - Linux/: in2.txt  main.cpp
comum/: configuracao.py  entrada.py  modelagem.py  saida.py  validacao.py
