[tool.poetry]
name = "pesquisa-operacional-pli-cplex"
version = "0.1.0"
description = "Modelos classicos de PLI usando Docplex e CPLEX"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
cplex = "*"
docplex = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"